PostGIS 3.0.12dev
xxxx/xx/xx
PostgreSQL 9.5-13 required. GEOS 3.6+ required but GEOS 3.9+ to take advantage of all features.
Proj 4.9+ required.
* Bug Fixes *

 - #5795, [topology] Fix ST_NewEdgesSplit can cause invalid topology (Björn Harrtell)
 - Handle null returns from wkb parser, Paul Ramsey
 - #5818, GT-244 Fix CG_IsSolid function (Loïc Bartoletti)

PostGIS 3.0.11
2024/02/06

* Bug Fixes *

 - #5610, Regression fix: Allow Nan and infinity again
          in ST_SetPoint (Regina Obe)
 - #5627, Handling of EMPTY components in PiP check (Paul Ramsey)
 - #5604, Handle distance between collections with empty elements (Paul Ramsey)
 - #5635, Handle NaN points in ST_Split (Regina Obe)
 - #5646, Crash on collections with empty members (Paul Ramsey)
 - #5580, Handle empty collection components in 3d distance (Paul Ramsey)
 - #5639, ST_DFullyWithin line/poly error case (Paul Ramsey)
 - #5662, Change XML parsers to SAX2 (Paul Ramsey)

PostGIS 3.0.10
2023/11/19

* Bug Fixes *

  - #5450, Fix macro expansion recursion on powerpc architectures.
           (Bas Couwenberg)
  - #5568, Improve robustness of topology face split handling (Sandro Santilli)
  - #5616, Fix to find docbook on newer docbook installs (Regina Obe)

PostGIS 3.0.9
2023/05/29

* Bug Fixes *

  - #5384, Fix crash in ST_AsGML when given id is longer than given prefix
           (Sandro Santilli)
  - #5338, Dump/Restore of raster table fails on
           enforce_coverage_tile_rast constraint (Regina Obe)
  - #5315, #5319, #5320, #5342 crashes on infinite coordinates
          (Regina Obe, Paul Ramsey)
  - #5344, Include topology id sequence state in dumps (Sandro Santilli)
  - #5288, ST_LineCrossingDirection multi-cross error (Paul Ramsey)
  - #5347, _ST_BestSRID crashes on ARM with infinite geometries (Regina Obe)

PostGIS 3.0.8
2022/11/11

* Bug and Security Fixes *
  - [security] Add schema qual to upgrade util (Regina Obe)
  - #5240, ST_DumpPoints crash with empty polygon (Regina Obe)