@@ -2,8 +2,10 @@ PostGIS 3.0.12dev
 xxxx/xx/xx
 PostgreSQL 9.5-13 required. GEOS 3.6+ required but GEOS 3.9+ to take advantage of all features.
 Proj 4.9+ required.
+
 * Bug Fixes *
 
+ - #5907, [topology] Fix crash in TopoGeo_AddPolygon with EMPTY input (Sandro Santilli)
  - #5795, [topology] Fix ST_NewEdgesSplit can cause invalid topology (Björn Harrtell)
  - Handle null returns from wkb parser, Paul Ramsey
  - #5818, GT-244 Fix CG_IsSolid function (Loïc Bartoletti)
